# src/lib/db/types.ts
@@ -172,6 +172,9 @@ export type DexieUserPreferences = {
 	showSleepWidget: boolean;
 	showFastingWidget: boolean;
 	showDayPropertiesWidget: boolean;
+	showWaterWidget: boolean;
+	showActivityWidget: boolean;
+	showNotesWidget: boolean;
 	showRecipeSuggestionsWidget: boolean;
 	widgetOrder: string[];
 	mealOrder: string[];
